--- a/model-fitting.ipynb
+++ b/model-fitting.ipynb
@@ -18,6 +18,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "60ae4851",
+   "metadata": {},
+   "source": [
+    "## Determining range of parameter settings to explore\n",
+    "\n",
+    "There is an infinite number of possible parameter settings of (combinations of) speaker_rationality and listener_rationality. However, only a limited range of possible parameter settings will produce (i) visual search costs and (ii) production probabilities that show sensible/human-like variability. Therefore, in order to determine what range of parameter settings to start with in the model-fitting process, we will first explore what visual search costs and production probabilities different parameter settings produce."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dfaf6faa",
    "metadata": {},
    "source": [
@@ -37,7 +47,9 @@
     "\n",
     "**<span class=\"mark\">Q: Likelihood function with two parameters??:</span>**\n",
     "\n",
-    "$$ \\mathcal{L}(\\theta_{1}, \\theta_{2} | x_{1}, ..., x_{n}) = \\prod_{i=1}^{n} f(x_{i} | \\theta_{1}, \\theta_{2}) $$\n"
+    "$$ \\mathcal{L}(\\theta_{1}, \\theta_{2} | x_{1}, ..., x_{n}) = \\prod_{i=1}^{n} f(x_{i} | \\theta_{1}, \\theta_{2}) $$\n",
+    "\n",
+    "In our case, every $x_{i}$ is a count of how often a given word is used in a given situation, where a situation is a given combination of object location (i.e. referent) and listener location.\n"
    ]
   },
   {
@@ -1646,42 +1658,56 @@
     "    \n",
     "\n",
     "def calc_multinom_pmf(pd_model_predictions, pd_data, model, language, object_pos, listener_pos, speaker_tau, listener_tau):\n",
+    "    \"\"\"\n",
+    "    Calculates the likelihood and log_likelihood of the parameters speaker_tau and listener_tau given the data.\n",
+    "\n",
+    "    :param pd_model_predictions: Pandas dataframe containing the model predictions. Should contain at least the following columns: \"Model\", \"Word\", \"Referent\", \"Listener_pos\", \"WordNo\", \"SpeakerTau\", and \"ListenerTau\".\n",
+    "    :param pd_data: Pandas dataframe containing the experimental data. Should contain at least the following columns: \"Object_Position\", \"Listener_Position\", \"Language\"\n",
+    "    :param model: String; Model to be used to produce model predictions: \"distance\" or \"person\"\n",
+    "    :param language: String; Language from which the experimental data should be taken: \"English\", \"Italian\", \"Portuguese\" or \"Spanish\"\n",
+    "    :param object_pos: Integer; Object position (i.e. position of the referent) that should be looked at\n",
+    "    :param listener_pos: Integer; Listener position that should be looked at\n",
+    "    :param speaker_tau: Float; Speaker rationality value that should be used to calculate likelihood\n",
+    "    :param listener_tau: Float; Listener rationality value that should be used to calculate likelihood\n",
+    "    :return: (i) Float, (ii) float; (i) LOG likelihood of parameters given data, (ii) Likelihood of parameters given data\n",
+    "    \"\"\"\n",
     "    if language == \"English\" or language == \"Italian\":\n",
     "        WordNo = 2\n",
     "        words = [\"este\", \"aquel\"]\n",
     "    elif language == \"Portuguese\" or language == \"Spanish\":\n",
     "        WordNo = 3\n",
     "        words = [\"este\", \"ese\", \"aquel\"]\n",
-    "    probs_per_word = np.zeros((WordNo))   \n",
+    "    probs_per_word = np.zeros((WordNo))\n",
     "    counts_per_word = np.zeros((WordNo))\n",
     "    for i in range(len(words)):\n",
     "        word = words[i]\n",
     "        model_prediction_row = pd_model_predictions[pd_model_predictions[\"Model\"]==model][pd_model_predictions[\"Word\"]==word][pd_model_predictions[\"Referent\"]==object_pos][pd_model_predictions[\"Listener_pos\"]==listener_pos][pd_model_predictions[\"WordNo\"]==WordNo][pd_model_predictions[\"SpeakerTau\"]==speaker_tau][pd_model_predictions[\"ListenerTau\"]==listener_tau]\n",
     "        model_prediction_prob = model_prediction_row[\"Probability\"]\n",
     "        probs_per_word[i] = model_prediction_prob\n",
-    "        # Below is object_pos+1 and listener_pos+1, because in the model_predictions dataframe it starts counting \n",
+    "        # Below is object_pos+1 and listener_pos+1, because in the model_predictions dataframe it starts counting\n",
     "        # from 0, but in the experimental data dataframe it starts counting from 1.\n",
     "        data_count_row = pd_data[pd_data[\"Object_Position\"] == object_pos+1][pd_data[\"Listener_Position\"] == listener_pos+1][pd_data[\"Language\"] == language]\n",
     "        data_count = data_count_row[word]\n",
     "        counts_per_word[i] = data_count\n",
     "        total = data_count_row[\"Total\"]\n",
-    "    multinom_pmf = multinomial.pmf(counts_per_word, n=total, p=probs_per_word)\n",
     "    multinom_logpmf = multinomial.logpmf(counts_per_word, n=total, p=probs_per_word)\n",
-    "    return multinom_pmf[0], multinom_logpmf[0]\n",
+    "    multinom_pmf = multinomial.pmf(counts_per_word, n=total, p=probs_per_word)\n",
+    "    return multinom_logpmf[0], multinom_pmf[0]\n",
     "\n",
     "\n",
-    "multinom_pmf, multinom_logpmf = calc_multinom_pmf(model_predictions, data_pd, model, language, object_position, listener_position, speaker_tau, listener_tau)\n",
+    "multinom_logpmf, multinom_pmf = calc_multinom_pmf(model_predictions, data_pd, model, language, object_position, listener_position, speaker_tau, listener_tau)\n",
     "print(f\"LANGUAGE IS: {language} + MODEL IS: {model}\")\n",
+    "print(\"multinom_logpmf is:\")\n",
+    "print(multinom_logpmf)\n",
     "print(\"multinom_pmf is:\")\n",
     "print(multinom_pmf)\n",
-    "print(\"multinom_logpmf is:\")\n",
-    "print(multinom_logpmf)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "fe4c29a9",
+   "id": "71ffbb2c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-11-08T14:33:54.827685Z",
@@ -1726,30 +1752,44 @@
     "    \n",
     "\n",
     "def product_logpmf_over_situations(pd_model_predictions, pd_data, model, language, speaker_tau, listener_tau, object_positions, listener_positions):\n",
+    "    \"\"\"\n",
+    "    Calculates the product of the likelihood values (i.e. sum of the LOG likelihood values) across all situations (i.e. all different trials) in the experiment. That is: all different combinations of possible object_positions and listener_positions.\n",
+    "\n",
+    "    :param pd_model_predictions: Pandas dataframe containing the model predictions. Should contain at least the following columns: \"Model\", \"Word\", \"Referent\", \"Listener_pos\", \"WordNo\", \"SpeakerTau\", and \"ListenerTau\".\n",
+    "    :param pd_data: Pandas dataframe containing the experimental data. Should contain at least the following columns: \"Object_Position\", \"Listener_Position\", \"Language\"\n",
+    "    :param model: String; Model to be used to produce model predictions: \"distance\" or \"person\"\n",
+    "    :param language: String; Language from which the experimental data should be taken: \"English\", \"Italian\", \"Portuguese\" or \"Spanish\"\n",
+    "    :param speaker_tau: Float; Speaker rationality value that should be used to calculate likelihood\n",
+    "    :param listener_tau: Float; Listener rationality value that should be used to calculate likelihood\n",
+    "    :param object_positions: List of integers; All possible object (i.e. referent) positions\n",
+    "    :param listener_positions: List of integers; All possible listener positions\n",
+    "    :return: (i) Float; (ii) float; (i) The sum of all LOG likelihoods (because multiplication in non-log space is equal to addition in log-space), (ii) the product of all likelihoods\n",
+    "    \"\"\"\n",
     "    log_product = np.log(1.0)  # The first probability should be multiplied with 1.0, which is equivalent to 0.0 in log-space\n",
-    "    prob_product = 1.0\n",
+    "    product = 1.0\n",
     "    for object_pos in object_positions:\n",
     "        for listener_pos in listener_positions:\n",
-    "            multinom_pmf, multinom_logpmf = calc_multinom_pmf(pd_model_predictions, pd_data, model, language, object_pos, listener_pos, speaker_tau, listener_tau)\n",
+    "            multinom_logpmf, multinom_pmf = calc_multinom_pmf(pd_model_predictions, pd_data, model, language, object_pos, listener_pos, speaker_tau, listener_tau)\n",
+    "            #TODO: Should I be using logaddexp() or logsumexp() instead?\n",
     "            log_product += multinom_logpmf  # multiplication in probability space is equivalent to addition in log-space\n",
-    "            prob_product *= multinom_pmf\n",
-    "    return log_product, prob_product\n",
+    "            product *= multinom_pmf\n",
+    "    return log_product, product\n",
     "            \n",
     "    \n",
-    "log_product, prob_product = product_logpmf_over_situations(model_predictions, data_pd, model, language, speaker_tau, listener_tau, object_positions, listener_positions)\n",
+    "log_product, product = product_logpmf_over_situations(model_predictions, data_pd, model, language, speaker_tau, listener_tau, object_positions, listener_positions)\n",
     "print(f\"LANGUAGE = {language} + MODEL = {model} + SPEAKER TAU = {speaker_tau} + LISTENER TAU = {listener_tau}\")\n",
     "print(\"log_product is:\")\n",
     "print(log_product)\n",
     "print(\"np.exp(log_product) is:\")\n",
     "print(np.exp(log_product))\n",
-    "print(\"prob_product is:\")\n",
-    "print(prob_product)"
+    "print(\"product is:\")\n",
+    "print(product)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6e6e1c55",
+   "id": "f82c863e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-11-08T14:34:40.274392Z",
@@ -2706,6 +2746,20 @@
     "    \n",
     "\n",
     "def likelihood_across_parameter_settings(pd_model_predictions, pd_data, model, language, tau_start, tau_stop, tau_step, object_positions, listener_positions):\n",
+    "    \"\"\"\n",
+    "    Calculates the sum of LOG likelihoods and product of likelihoods of the parameters given the data across a range of combinations of possible parameter settings for speaker_rationality (i.e. SpeakerTau) and listener_rationality (i.e. ListenerTau).\n",
+    "\n",
+    "    :param pd_model_predictions: Pandas dataframe containing the model predictions. Should contain at least the following columns: \"Model\", \"Word\", \"Referent\", \"Listener_pos\", \"WordNo\", \"SpeakerTau\", and \"ListenerTau\". The columns \"SpeakerTau\" and \"ListenerTau\" should contain the full range of parameter settings corresponding to the input arguments tau_start, tau_stop, and tau_step.\n",
+    "    :param pd_data: Pandas dataframe containing the experimental data. Should contain at least the following columns: \"Object_Position\", \"Listener_Position\", \"Language\"\n",
+    "    :param model: String; Model to be used to produce model predictions: \"distance\" or \"person\"\n",
+    "    :param language: String; Language from which the experimental data should be taken: \"English\", \"Italian\", \"Portuguese\" or \"Spanish\"\n",
+    "    :param tau_start: Float; Starting point of range of parameter settings that should be explored\n",
+    "    :param tau_stop: Float; End point of range of parameter settings that should be explored\n",
+    "    :param tau_step: Float; Step size for range of parameter settings that should be explored\n",
+    "    :param object_positions: List of integers; All possible object (i.e. referent) positions\n",
+    "    :param listener_positions: List of integers; All possible listener positions\n",
+    "    :return: (i) Pandas dataframe, (ii) Pandas dataframe; (i) dataframe containing LOG likelihood values, with the following three columns: \"SpeakerTau\", \"ListenerTau\", and \"LogLikelihood\", (ii) dataframe containing likelihood values, with the following three columns: \"SpeakerTau\", \"ListenerTau\", and \"Likelihood\",\n",
+    "    \"\"\"\n",
     "    log_likelihood_dict = {\"SpeakerTau\":[],\n",
     "                   \"ListenerTau\":[],\n",
     "                   \"LogLikelihood\":[]}\n",
@@ -2718,12 +2772,6 @@
     "        for speaker_rationality in np.arange(tau_start, tau_stop, tau_step):\n",
     "            print(f\"speaker_rationality is {speaker_rationality}:\")\n",
     "            log_product, prob_product = product_logpmf_over_situations(pd_model_predictions, pd_data, model, language, round(speaker_rationality, 2), round(listener_rationality, 2), object_positions, listener_positions)\n",
-    "            print(\"log_product is:\")\n",
-    "            print(log_product)\n",
-    "            print(\"np.exp(log_product) is:\")\n",
-    "            print(np.exp(log_product))\n",
-    "            print(\"prob_product is:\")\n",
-    "            print(prob_product)\n",
     "            log_likelihood_dict[\"SpeakerTau\"].append(speaker_rationality)\n",
     "            log_likelihood_dict[\"ListenerTau\"].append(listener_rationality)\n",
     "            log_likelihood_dict[\"LogLikelihood\"].append(log_product)\n",
@@ -2760,18 +2808,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1aded02",
-   "metadata": {},
-   "source": [
-    "## Monte Carlo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "cb92764c",
    "metadata": {},
    "source": [
-    "## Model Comparison"
+    "## Model Comparison\n",
+    "\n",
+    "**Julian:** Just divide the likelihoods of the two models by each other to get a likelihood ratio.\n",
+    "\n",
+    "<span class=\"mark\">**Q: So is that the likelihood of the parameters given the data? Or the likelihood of the data given the model?**</span>"
    ]
   },
   {
@@ -2828,9 +2872,14 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "380.797px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
