--- a/model-fitting.ipynb
+++ b/model-fitting.ipynb
@@ -21,7 +21,7 @@
    "id": "60ae4851",
    "metadata": {},
    "source": [
-    "## Determining range of parameter settings to explore\n",
+    "## Determining parameter range\n",
     "\n",
     "There is an infinite number of possible parameter settings of (combinations of) speaker_rationality and listener_rationality. However, only a limited range of possible parameter settings will produce (i) visual search costs and (ii) production probabilities that show sensible/human-like variability. Therefore, in order to determine what range of parameter settings to start with in the model-fitting process, we will first explore what visual search costs and production probabilities different parameter settings produce."
    ]
@@ -2876,7 +2876,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "380.797px"
+    "width": "266.797px"
    },
    "toc_section_display": true,
    "toc_window_display": true
